@@ -562,14 +562,6 @@ class Smarty
      */
     var $_cache_including = false;
 
-    /**
-     * array of super globals internally
-     *
-     * @var array
-     */
-    var $_supers = array();
-
-
     /**#@-*/
     /**
      * The class constructor.
@@ -578,29 +570,6 @@ class Smarty
     {
       $this->assign('SCRIPT_NAME', isset($_SERVER['SCRIPT_NAME']) ? $_SERVER['SCRIPT_NAME']
                     : @$GLOBALS['HTTP_SERVER_VARS']['SCRIPT_NAME']);
-                    
-      $this->_supers['get'] = $this->request_use_auto_globals 
-        ? (isset($_GET) ? $_GET : array())
-        : $GLOBALS['HTTP_GET_VARS'];
-      $this->_supers['post'] = $this->request_use_auto_globals
-        ? (isset($_POST) ? $_POST : array())
-        : $GLOBALS['HTTP_POST_VARS'];
-      $this->_supers['server'] = $this->request_use_auto_globals
-        ? (isset($_SERVER) ? $_SERVER : array())
-        : $GLOBALS['HTTP_SERVER_VARS'];
-      $this->_supers['session'] = $this->request_use_auto_globals
-        ? (isset($_SESSION) ? $_SESSION : array())
-        : $GLOBALS['HTTP_SESSION_VARS'];
-      $this->_supers['request'] = $this->request_use_auto_globals
-        ? (isset($_REQUEST) ? $_REQUEST : array())
-        : $GLOBALS['HTTP_REQUEST_VARS'];
-      $this->_supers['cookies'] = $this->request_use_auto_globals
-        ? (isset($_COOKIE) ? $_COOKIE : array())
-        : $GLOBALS['HTTP_COOKIE_VARS'];
-      $this->_supers['env'] = $this->request_use_auto_globals
-        ? (isset($_ENV) ? $_ENV : array())
-        : $GLOBALS['HTTP_ENV_VARS'];
-                    
     }
 
     /**
